--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.16"
+    "naive-ui": "^2.19.9",
+    "vfonts": "^0.1.0",
+    "vue": "^3.2.16",
+    "vue-router": "4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
