--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "walk-view",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
