--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "naive-ui": "^2.19.9",
     "vfonts": "^0.1.0",
     "vue": "^3.2.16",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
+    "@vicons/fluent": "^0.11.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
